# knowledge-graph-mvp

./: .env.example  .gitignore  .graphifyignore  AGENTS.md  AGENT_PROJECT_BRIEF.md  CLAUDE.md  Makefile  README.md
apps/backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml
apps/backend/authorization/: __init__.py  client.py  identifiers.py  lookup.py  oauth_viewer.py  schema.zed  schema_oauth_viewer.validation.yaml  sync.py  test_oauth_viewer.py  test_per_user_lookup.py  tests.py  urls.py  views.py
apps/backend/config/: asgi.py  celery.py  logging_filters.py  settings.py  settings_test.py  settings_validators.py  test_client_deployment_config.py  test_google_adc_deployment.py  test_logging_filters.py  test_open_webui_deployment.py  test_settings_validators.py  urls.py  wsgi.py
apps/backend/core/: tasks.py  tests.py  urls.py  views.py
apps/backend/graph/: db.py  embeddings.py  extraction.py  graphrag.py  guard.py  ontology.py  pipeline.py  schema.py  tests.py  writer.py
apps/backend/health/: apps.py  checks.py  tests.py  urls.py  views.py
apps/backend/integrations/: apps.py  drive_oauth_urls.py  drive_oauth_views.py  freshness.py  google_session_oauth_urls.py  google_session_oauth_views.py  models.py  permission_authority.py  serializers.py  tasks.py  test_drive_oauth_api.py  test_freshness.py  test_google_session_oauth_api.py  test_permission_authority.py  test_user_visibility_models.py  tests.py  urls.py  views.py
apps/backend/retrieval/: answers.py  context.py  evaluation.py  identity.py  neo4j.py  open_webui.py  open_webui_auth.py  serializers.py  (+17 more)
(+130 files in other folders)
