[project]
name = "knowledge-graph-backend"
version = "0.1.0"
description = "Django backend for a permission-safe Google Drive knowledge graph MVP."
readme = "../../README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "celery>=5.4,<6.0",
    "django>=5.2,<6.0",
    "django-environ>=0.11,<1.0",
    "djangorestframework>=3.15,<4.0",
    "google-api-python-client>=2.100,<3.0",
    "google-auth>=2.30,<3.0",
    "gunicorn>=23.0,<24.0",
    "neo4j>=5.28,<6.0",
    "neo4j-graphrag[openai]>=1.18.0",
    "psycopg[binary]>=3.2,<4.0",
    "redis>=5.2,<6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = []
